app working. css done

--- a/dad/src/App.css
+++ b/dad/src/App.css
@@ -1,38 +1,45 @@
+body {
+  background-color: #f0e68c;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 4rem;
+  color: #100b09;
+  text-decoration: underline;
+  width: 85%;
+  margin: 1% auto;
 }
 
-.App-link {
-  color: #61dafb;
+.beerCard {
+  background-color: seashell;
+  border: 5px double black;
+  margin: 2% 20%;
+  padding: 2%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h2 {
+  color: #8b4513;
+  font-size: 2.5rem;
+}
+
+img {
+  width: 60%;
+  height: 70vh;
+  border: 3px dotted purple;
+  margin: 2% auto;
+  padding: 2% 5%;
+}
+
+h4 {
+  color: #8b4513;
+  font-size: 2rem;
+}
+
+.listItem {
+  color: #808000;
+  font-size: 1.5rem;
 }
